# KitsuneOS

./: Cargo.toml
.cargo/: config.toml
qemu/: boot.sh
qemu/esp/: NvVars
qemu/esp/efi/boot/: bootx64.efi
src/: allocator.rs  apic.rs  console.rs  framebuffer.rs  gdt.rs  interupts.rs  keyboard.rs  main.rs  memory.rs  psfparser.rs  virtualmapper.rs
src/allocator_types/: linked_list.rs  mod.rs
