[package]
name = "KitsuneOS"
version = "0.1.0"
edition = "2024"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
[[bin]]
name = "KitsuneOS"
test = false
bench = false
[dependencies]
bitflags = "2.10.0"
mutex = "1.0.2"
pic8259 = "0.11.0"
simple-psf = "0.1.2"
spin = "0.10.0"
uefi = "0.36.1"
x86_64 = "0.15.2"
[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
